--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method(plot,authors)
 S3method(plot,dracor)
 S3method(plot,play_igraph)
 S3method(summary,authors)
-S3method(summary,dracor)
 export(authors)
 export(dracor)
 export(get_corpus)
@@ -27,7 +26,12 @@ export(is.authors)
 export(is.dracor)
 export(is.play_igraph)
 export(label_play_graph)
+exportClasses(authors)
+exportClasses(corpus)
+exportClasses(dracor)
+exportClasses(play_igraph)
 exportMethods(authors)
+exportMethods(corpus)
 exportMethods(dracor)
 exportMethods(is)
 exportMethods(play_igraph)
