--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(plot,authors)
 S3method(plot,dracor)
 S3method(plot,play_igraph)
 S3method(summary,authors)
+S3method(summary,corpus)
+S3method(summary,dracor)
 export(authors)
 export(dracor)
 export(get_corpus)
@@ -22,21 +24,11 @@ export(get_play_stage_directions)
 export(get_play_stage_directions_with_sp)
 export(get_play_tei)
 export(get_sparql)
-export(is.authors)
-export(is.dracor)
-export(is.play_igraph)
 export(label_play_graph)
 exportClasses(authors)
 exportClasses(corpus)
 exportClasses(dracor)
 exportClasses(play_igraph)
-exportMethods(authors)
-exportMethods(corpus)
-exportMethods(dracor)
-exportMethods(is)
-exportMethods(play_igraph)
-exportMethods(plot)
-exportMethods(summary)
 import(data.table)
 import(ggplot2)
 import(igraph)
