--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(summary,corpus)
 S3method(summary,dracor)
 export(authors)
 export(dracor)
+export(dracor_api)
 export(get_corpus)
 export(get_dracor)
 export(get_dracor_api_info)
@@ -31,7 +32,9 @@ exportClasses(dracor)
 exportClasses(play_igraph)
 import(data.table)
 import(ggplot2)
+import(httr)
 import(igraph)
+import(xml2)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,par)
