--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,5 @@ Imports:
 RoxygenNote: 6.1.1
 Suggests: 
     testthat
+URL: https://github.com/Pozdniakov/rdracor
+BugReports: https://github.com/Pozdniakov/rdracor/issues
