--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(get_play_stage_directions)
 export(get_play_stage_directions_with_sp)
 export(get_play_tei)
 export(get_sparql)
+export(is.corpus)
 export(label_play_graph)
 exportClasses(authors)
 exportClasses(corpus)
