--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Imports:
     httr (>= 1.4.1)
 RoxygenNote: 6.1.1
 Suggests: 
-    testthat,
+    testthat (>= 2.1.0),
     covr
 URL: https://github.com/Pozdniakov/rdracor
 BugReports: https://github.com/Pozdniakov/rdracor/issues
