polished core, added summary for play_igraph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(plot,play_igraph)
 S3method(summary,authors)
 S3method(summary,corpus)
 S3method(summary,dracor)
+S3method(summary,play_igraph)
 export(authors)
 export(dracor_api)
 export(get_corpus)
