--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,14 +6,13 @@ S3method(plot,play_igraph)
 S3method(summary,authors)
 S3method(summary,corpus)
 S3method(summary,dracor)
+S3method(summary,play_igraph)
 export(authors)
-export(dracor)
 export(dracor_api)
 export(get_corpus)
 export(get_dracor)
 export(get_dracor_api_info)
 export(get_play_cast)
-export(get_play_igraph)
 export(get_play_metadata)
 export(get_play_metrics)
 export(get_play_networkdata_csv)
@@ -25,13 +24,17 @@ export(get_play_stage_directions)
 export(get_play_stage_directions_with_sp)
 export(get_play_tei)
 export(get_sparql)
-export(label_play_graph)
+export(is.authors)
+export(is.corpus)
+export(is.dracor)
+export(is.play_igraph)
+export(label_play_igraph)
+export(play_igraph)
 exportClasses(authors)
 exportClasses(corpus)
 exportClasses(dracor)
 exportClasses(play_igraph)
 import(data.table)
-import(ggplot2)
 import(httr)
 import(igraph)
 import(xml2)
