--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,24 @@
 Package: rdracor
 Type: Package
 Title: Access To The DraCor API
-Version: 0.3.1
+Version: 0.5.0
 Author: Ivan Pozdniakov <bucherr@yandex.ru>
 Maintainer: Ivan Pozdniakov <bucherr@yandex.ru>
-Description: The package is a wrapper for Drama Corpora Project (Dracor) API: https://dracor.org/documentation/api. 
+Description: Wrapper for Drama Corpora Project (Dracor) API: https://dracor.org/documentation/api. 
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Imports: 
     jsonlite (>= 1.6),
     utils,
+    methods,
     data.table (>= 1.12.2),
     xml2 (>= 1.2.2),
-    ggplot2 (>= 3.2.1),
     igraph (>= 1.2.4.1),
     httr (>= 1.4.1)
 RoxygenNote: 6.1.1
 Suggests: 
-    testthat
+    testthat (>= 2.1.0),
+    covr
+URL: https://github.com/Pozdniakov/rdracor
+BugReports: https://github.com/Pozdniakov/rdracor/issues
