--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ import(data.table)
 import(httr)
 import(igraph)
 import(xml2)
+importFrom(data.table,setnames)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,par)
