supress warnings during convertion to oxygen; download all function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(summary,play_igraph)
 export(authors)
 export(dracor_api)
 export(get_corpus)
+export(get_corpus_all)
 export(get_dracor)
 export(get_dracor_api_info)
 export(get_play_cast)
