add get_corpus_vec, generalize summary.corpus

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(authors)
 export(dracor_api)
 export(get_corpus)
 export(get_corpus_all)
+export(get_corpus_vec)
 export(get_dracor)
 export(get_dracor_api_info)
 export(get_play_cast)
