--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,10 @@ Imports:
     tibble (>= 3.1.8),
     purrr (>= 0.3.5),
     stringr (>= 1.4.1),
-    tidyr (>= 1.2.1)
+    tidyr (>= 1.2.1),
+    Rdpack (>= 2.4)
 RoxygenNote: 7.2.1
+RdMacros: Rdpack
 Suggests: 
     testthat (>= 2.1.0),
     covr
