add character fun

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(summary,dracor_meta)
 export(dracor_api)
 export(dracor_api_info)
 export(dracor_sparql)
+export(get_character_plays)
 export(get_coocur_igraph)
 export(get_dracor)
 export(get_dracor_meta)
