add relations igraph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 S3method(plot,coocur_igraph)
 S3method(plot,dracor_meta)
+S3method(plot,relations_igraph)
 S3method(summary,coocur_igraph)
 S3method(summary,dracor)
 S3method(summary,dracor_meta)
+S3method(summary,relations_igraph)
 export(dracor_api)
 export(dracor_api_info)
 export(dracor_sparql)
@@ -22,6 +24,7 @@ export(get_net_relations_graphml)
 export(get_play_cast)
 export(get_play_metadata)
 export(get_play_rdf)
+export(get_relations_igraph)
 export(get_text_chr_spoken)
 export(get_text_chr_spoken_bych)
 export(get_text_chr_stage)
@@ -29,6 +32,7 @@ export(get_text_chr_stage_with_sp)
 export(get_text_df)
 export(get_text_tei)
 export(is.coocur_igraph)
+export(is.relations_igraph)
 export(label_coocur_igraph)
 export(tei_to_df)
 import(data.table)
