--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(purrr,modify_at)
 importFrom(purrr,safely)
 importFrom(stats,na.omit)
 importFrom(tibble,as_tibble)
