--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rdracor
 Type: Package
 Title: Access To The DraCor API
-Description: Provide an interface for Drama Corpora Project (Dracor) API: https://dracor.org/documentation/api. 
+Description: Provide an interface for Drama Corpora Project (DraCor) API: https://dracor.org/documentation/api. 
 Version: 0.6.6
 Author: Ivan Pozdniakov <bucherr@yandex.ru>
 Maintainer: Ivan Pozdniakov <bucherr@yandex.ru>
@@ -23,7 +23,6 @@ Imports:
 RoxygenNote: 7.2.1
 RdMacros: Rdpack
 Suggests: 
-    testthat (>= 2.1.0),
-    covr
+    testthat (>= 2.1.0)
 URL: https://github.com/dracor-org/rdracor
 BugReports: https://github.com/dracor-org/rdracor/issues
