--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rdracor
 Type: Package
-Title: Access To The DraCor API
-Description: Provide an interface for Drama Corpora Project (DraCor) API: https://dracor.org/documentation/api. 
-Version: 0.7.0
+Title: Access to the DraCor API
+Description: Provide an interface for Drama Corpora Project (DraCor) API: <https://dracor.org/documentation/api>. 
+Version: 0.7.1
 Author: Ivan Pozdniakov <bucherr@yandex.ru>
 Maintainer: Ivan Pozdniakov <bucherr@yandex.ru>
 License: GPL (>= 3)
