--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: rdracor
 Type: Package
-Title: Access to the DraCor API
-Description: Provide an interface for Drama Corpora Project (DraCor) API: <https://dracor.org/documentation/api>. 
+Title: Access to the 'DraCor' API
+Description: Provide an interface for 'Drama Corpora Project' ('DraCor') API: <https://dracor.org/documentation/api>. 
 Version: 0.7.1
 Author: Ivan Pozdniakov <bucherr@yandex.ru>
 Maintainer: Ivan Pozdniakov <bucherr@yandex.ru>
