fix DraCor API URL as internal state

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(dracor_api_info)
 export(dracor_sparql)
 export(get_character_plays)
 export(get_dracor)
+export(get_dracor_api_url)
 export(get_dracor_meta)
 export(get_net_cooccur_edges)
 export(get_net_cooccur_gexf)
@@ -32,6 +33,7 @@ export(get_text_chr_stage_with_sp)
 export(get_text_df)
 export(get_text_tei)
 export(label_cooccur_igraph)
+export(set_dracor_api_url)
 export(tei_to_df)
 import(data.table)
 import(httr)
