Adjust to renaming 'cast' to 'characters' in dracor-api
see dracor-org/dracor-api#217

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,7 @@ export(get_net_relations_edges)
 export(get_net_relations_gexf)
 export(get_net_relations_graphml)
 export(get_net_relations_igraph)
-export(get_play_cast)
+export(get_play_characters)
 export(get_play_metadata)
 export(get_play_rdf)
 export(get_text_chr_spoken)
