--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(purrr,map_chr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,modify_at)
+importFrom(purrr,possibly)
 importFrom(purrr,safely)
 importFrom(stats,na.omit)
 importFrom(tibble,as_tibble)
